WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215189
Crash in com.apple.WebKit.WebContent at com.apple.AppKit: _NSAccessibilityRemoveAllObserversAndSendDestroyedNotification
https://bugs.webkit.org/show_bug.cgi?id=215189
Summary
Crash in com.apple.WebKit.WebContent at com.apple.AppKit: _NSAccessibilityRem...
Andres Gonzalez
Reported
2020-08-05 13:51:46 PDT
Crash in com.apple.WebKit.WebContent at com.apple.AppKit: _NSAccessibilityRemoveAllObserversAndSendDestroyedNotification
Attachments
Patch
(7.11 KB, patch)
2020-08-05 14:15 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-08-05 14:15:30 PDT
Created
attachment 406038
[details]
Patch
Andres Gonzalez
Comment 2
2020-08-05 14:19:59 PDT
<
rdar://problem/66561167
>
EWS
Comment 3
2020-08-05 16:21:27 PDT
Committed
r265311
: <
https://trac.webkit.org/changeset/265311
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406038
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug